Nikola auto commit.
Source commit: 84ca872daa49d8829fc8ff620ec66091a43573fa
Nikola version: 8.2.3

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -105,18 +105,20 @@ Good question. Depending on my mood and blood sugar levels, I've most often answ
 <p>I should stress that I am neither a biologist nor even an experienced farmer, but I think that's a strength for this particular project. You don't want to be trying to follow the precise protocols laid out by a team of research chemists and biology theorists — you want to be following a schmoe like me, because anything I can achieve, you can do better.</p>
 <h2>Connection Points</h2>
 <ul>
-<li>Creativity Hacker (my main website)</li>
-<li>Reddit</li>
-<li>WT.Social (Wikipedia's experiment in ethical social media)</li>
-<li>Disqus</li>
-<li>Discord</li>
+<li>
+<a href="https://creativityhacker.ca">Creativity Hacker</a> (my main website)</li>
+<li><a href="https://reddit.com/u/JeffersonSmithAuthor">Reddit</a></li>
+<li>
+<a href="https://wt.social/u/jefferson-smith">WT.Social</a> (Wikipedia's experiment in ethical social media)</li>
+<li><a href="https://disqus.com/by/disqus_FHrYVTzhAH/">Disqus</a></li>
+<li><a href="https://discordapp.com/users/927212747953934367">Discord</a></li>
 </ul>
 <h2>Dead To Me</h2>
 <p>I've made the decision to abandon my social media presence wherever black-box content-filtering algorithms are used, because I believe they are dividing society into silos and destroying public discourse. If we don't have control over what we see, I won't participate. So far, that list includes:</p>
 <ul>
-<li>Facebook</li>
-<li>Twitter</li>
-<li>TikTok</li>
+<li><del>Facebook</del></li>
+<li><del>Twitter</del></li>
+<li><del>TikTok</del></li>
 </ul>
 </div>
     <!-- from base/templates/story.tmpl regarding comments -->
