--- a/about-me/index.html
+++ b/about-me/index.html
@@ -102,7 +102,8 @@
     </header><div class="e-content entry-content" itemprop="articleBody text">
     <p><img src="../images/Jeff-Headshot.jpg" class="float-right col-md-4">
 Good question. Depending on my mood and blood sugar levels, I've most often answered that with one of: computer scientist, creativity theorist, fantasy and science fiction author, computer animation consultant, or tech entrepreneur. But recently I've added another title to that strange roulette wheel: experimental indoor farmer.</p>
-<p>I should stress that my PhD is in computer science, not biology. I'm not even an experienced farmer. But I think that's a strength in this particular project. You don't want to be following a complicated laboratory protocol laid down by a team of research chemists and biology theorists — you want something a schmoe like me could figure out, because then there's a very good chance you'll be able to do it too.</p>
+<p>I should stress that my PhD is in computer science, not biology. I'm not even an experienced gardener. But I think that's a strength in this particular case. You don't want to be following a complicated laboratory protocol laid down by a team of research chemists and biology theorists — you want something easy. Something a schmoe like me could figure out. </p>
+<p>Because then there's a good chance you'll be able to do it too.</p>
 <h2>Connection Points</h2>
 <ul>
 <li>
