--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <p>What happens then? Well, there’s one tipping point I see that could very well trigger a collapse. If we panicked over a hiccup in the <i>toilet paper</i> supply, just imagine what will happen when it's the <i>food aisles</i> that are empty.</p>
 
-        <p>So, as a wise man once said, "Be as optimistic as you like. Just be sure you've got a Plan B." Project Calorie Fountain is my Plan B.</p>
+        <p>So, as a wise man once said, "Be as optimistic as you like. Just be sure you've got a Plan B." Think of Project Calorie Fountain as my Plan B. (See <a href="mission">Mission</a> for more.)</p>
     </div>
     </div>
     </div>
