--- a/mission/index.html
+++ b/mission/index.html
@@ -109,7 +109,7 @@
 <p>So the question I keep asking myself, is the one up there in the banner of this site: If society stumbles and the grocery trucks stop rolling, how long will I be able to feed my family? Will I be able to keep it up for as long as a year, while we wait for things to get sorted out? And what if that single year turns into five?</p>
 <p>I'm not about to lay in a 12 year supply of canned asparagus. During a food crisis, that stack of cans would make me indistinguishable from a hoarder, so I'd wind up with a target on my back from every asparigatarian warlord of the apocalypse. </p>
 <p>Instead of creating a <em>stockpile</em> of food, then, which would only last a few weeks, my goal is to devise a <em>generator</em> of food. A calorie fountain. Something that can be replicated anywhere, feed a family, and do so indefinitely.</p>
-<p>So I am saying no to our <a href="../images/asparigatarian_overlord.png">asparigatarian overlords</a>. And if you want to say no too, I'll be giving the plans away for free.</p>
+<p>So I am saying no to our <a href="../images/asparigatarian_overlord.jpg">asparigatarian overlords</a>. And if you want to say no too, I'll be giving the plans away for free.</p>
     </div>
     <!-- from base/templates/story.tmpl regarding comments -->
         <section class="comments"><h2>Comments</h2>
