Nikola auto commit.
Source commit: da8620a8bcb8b9b09057e05615746b8e82e40560
Nikola version: 8.2.3

--- a/priority/labnotes/index.html
+++ b/priority/labnotes/index.html
@@ -127,7 +127,10 @@
                 </p>
 </div>
             </header><div class="p-summary entry-summary">
-                    <p>This seems to be a standard problem in multivariate optimization, but it's been several decades since I studied the math for linear programming, so I'll start by trying to employ the LP tools in Python’s SciPy module, as outlined in <a href="https://realpython.com/python-scipy-cluster-optimize/#minimizing-a-function-with-many-variables">this article</a>.</p>
+                    <div>
+<p>When it comes to finding the optimal crops to support a family, there are a number of factors to consider: how much space is available, how many people are being supported, what are their daily calorie requirements, what vitamins and minerals does each crop provide... There's a <em>lot</em> to consider. And it's not like I can pick just one “best” mix and build a one-size-fits-all system around that. I need to figure out the optimal mix for my own scenario while allowing other fountaineers to figure out the right mix for <em>theirs</em> . Sounds complicated, right?</p>
+<p class="more"><a href="../../posts/computing-optimal-crop-mix/">Read more…</a></p>
+</div>
                 </div>
             </article><article class="h-entry post-text" itemscope="itemscope" itemtype="http://schema.org/Article"><header><h1 class="p-name entry-title"><a href="../../posts/growing-system-for-root-crops/" class="u-url">Growing system for root crops</a></h1>
                 <div class="metadata">
