--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <link rel="icon" href="favicon.ico" sizes="128x128">
 <link rel="icon" href="favicon.ico" sizes="192x192">
 <link rel="icon" href="favicon.ico" sizes="256x265">
-<!--[if lt IE 9]><script src="assets/js/html5.js"></script><![endif]--><meta name="author" content="Jefferson Smith">
+<!--[if lt IE 9]><script src="assets/js/html5.js"></script><![endif]--><script type="text/javascript" src="assets/js/jquery-3.6.3.min.js"></script><script type="text/javascript" src="assets/js/sorttable.js"></script><meta name="author" content="Jefferson Smith">
 <meta property="og:site_name" content="Project Calorie Fountain">
 <meta property="og:title" content="Home">
 <meta property="og:url" content="/">
@@ -117,12 +117,11 @@
     <div class="card-body d-flex flex-column align-items-start">
         <h4 class="mb-0">Why am I building it?
         </h4>
-<p>The natural world is trying to pay us dividends on our hubris, and no matter which payments we try to stop, the chances of stopping them all in time seems grim.</p>
+<p>The natural world is trying to pay dividends on our oblivious history, but no matter which payments we try to stop, the chances of stopping them all seems grim.</p>
 
         <p>What happens then? Well, there’s one tipping point I see that could very well trigger a collapse. If we panicked over a hiccup in the <i>toilet paper</i> supply, just imagine what will happen when it's the <i>food aisles</i> that are empty.</p>
 
-        <p>So, as a wise man once said, "Be as optimistic as you like. Just be sure you've got a Plan B." Think of Project Calorie Fountain as my Plan B. (See <a href="mission">Mission</a> for more.)</p>
-    </div>
+        <p>A wise man once said, "Be as optimistic as you like. Just be sure you've got a Plan B." So think of Project Calorie Fountain as my Plan B. (See more <a href="mission">here.</a> )</p> </div>
     </div>
     </div>
 </div>
@@ -133,11 +132,11 @@
 <p>The site is organized into 3 main sections: </p>
 <ul>
 <li>
-<a href="priority/labnotes">Lab Notes</a> - think of these as the project water cooler. It's where you'll find ideas, thoughts about the project, and minor status updates about the various active investigations</li>
+<a href="priority/labnotes">Lab Notes</a> - Think of these as the project water cooler. It's where you'll find ideas, thoughts about the project, and minor status updates about the various active investigations.</li>
 <li>
-<a href="priority/milestones">Milestones</a> - think of these as "Reports to Management." These are the more official posts I make to propose new investigation targets and report on their status</li>
+<a href="priority/milestones">Milestones</a> - Think of these as "Reports to Management." These are the more official posts I make to propose new investigation targets and report on their status.</li>
 <li>
-<a href="priority/panic">Panic Room</a> - the button you hit if you suddenly need to know how to build a calorie fountain RIGHT NOW</li>
+<a href="priority/panic">Panic Room</a> - The button you hit if you suddenly need to know how to build a calorie fountain RIGHT NOW.</li>
 </ul>
 </div>
     <!-- from base/templates/story.tmpl regarding comments -->
