--- a/about-me/index.html
+++ b/about-me/index.html
@@ -101,7 +101,7 @@
     </header><div class="e-content entry-content" itemprop="articleBody text">
     <p><img src="../images/Jeff-Headshot.jpg" class="float-right col-md-4">
 Good question. Depending on my mood and blood sugar levels, I've most often answered that with one of: computer scientist, creativity theorist, fantasy and science fiction author, computer animation consultant, or tech entrepreneur. But recently I've added another title to that strange roulette wheel: experimental indoor farmer.</p>
-<p>I should stress that my PhD is in computer science, not biology. I'm not even an experienced gardener. But I think that's a strength in this particular case. You don't want to be following a complicated laboratory protocol laid down by a team of research chemists and biology theorists — you want something easy. Something a schmoe like me could figure out. </p>
+<p>I should stress that my PhD is in computer science, not agriculture or biology. I'm not even an experienced gardener. But I think that's a strength in this particular case. You don't want to be following a complicated laboratory protocol laid down by a team of research chemists and biology theorists — you want something easy. Something a schmoe like me could figure out. </p>
 <p>Because then there's a good chance you'll be able to do it too.</p>
 <h2>Connection Points</h2>
 <ul>
@@ -114,7 +114,7 @@ Good question. Depending on my mood and blood sugar levels, I've most often answ
 <li><a href="https://discordapp.com/users/927212747953934367">Discord</a></li>
 </ul>
 <h2>Dead To Me</h2>
-<p>I've made the decision to abandon my social media presence wherever black-box content-filtering algorithms are used, because I believe they are dividing society into silos and destroying public discourse. If we don't have control over what we see, I won't participate. So far, that list includes:</p>
+<p>I've made the decision to abandon my social media presence wherever black-box content-filtering algorithms are used, because I believe they are dividing society into silos and poisoning public discourse. If we don't have control over what we see, I won't participate. So far, that list includes:</p>
 <ul>
 <li><del>Facebook</del></li>
 <li><del>Twitter</del></li>
