--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <p>I call it a "calorie fountain" — an indoor farming system that can feed a small family and fit within a single room of a suburban home.</p>
         <p>Slam-dunk success would be a system that can support three adults indefinitely, while being self-sufficient for all its power, light and heating needs. But I'll take anything that doesn't poison the family and set fire to the dog.</p>
         
-        <p>I also hope to build a community of <i>fountaineers</i> who are intrigued by the idea and want to get involved. Step 1 is to engage in the comments.</p>
+        <p>I also hope to build a community of <i>fountaineers</i> who are intrigued by the idea and want to get involved. If that's you, Step 1 is to engage in the comments.</p>
     </div>
     </div>
     </div>
@@ -117,7 +117,7 @@
         <h4 class="mb-0">Why am I building it?
         </h4>
 <p> 1/5 of children in Canada go to bed hungry at least once a week because their families can't afford groceries. But current indoor farming ventures seem focused on leafy "supplemental" crops — growing salads for the middle class — because that's where the money is that can provide a return for their investors.</p>
-        <p>But what if we used those same technologies to bring food security to those who don't have it? Better yet, instead of selling the food to them, what if we could show them how to build their own system and grow a nutritionally sufficient diet they could live on indefinitely?</p>
+        <p>But I think we can use that same technology to bring food security to those who don't already have it. Better yet, instead of using it to sell them food, I think we could show them how to build a system for themselves and become nutritionally self-sufficient. Forever. And that seems like a project worth doing.</p>
     </div>
     </div>
     </div>
@@ -125,13 +125,13 @@
 </div>
 
 <h2>Organization</h2>
-<p>All the work I'm doing to develop the calorie fountain will be posted here. This site will always be up-to-date with the most recent plans and suggestions, and can be downloading onto a laptop or even a thumb drive and viewed in your browser in any operating system and without having to install any other tools. </p>
+<p>All the work I'm doing to develop the calorie fountain will be posted here. This site will always be up-to-date with the most recent plans and suggestions, and can be downloaded onto a laptop or even a thumb drive and viewed in your browser in any operating system and without having to install any other tools. </p>
 <p>The site is organized into 3 main sections: </p>
 <ul>
 <li>
-<a href="priority/labnotes">Lab Notes</a> - Think of these as the project water cooler. It's where you'll find ideas, thoughts about the project, and minor status updates about the various active investigations.</li>
+<a href="priority/labnotes">Lab Notes</a> - Think of these as the project water cooler. It's where you'll find ideas, thoughts about the project, links to related materials, and minor status updates about my active investigations.</li>
 <li>
-<a href="priority/milestones">Milestones</a> - Think of these as "Reports to Management." These are the more official posts I make to propose new investigation targets and report on their status.</li>
+<a href="priority/milestones">Milestones</a> - Think of these as "Reports to Management." These are the more official posts I make to document decisions, propose new investigations, and report on their status.</li>
 <li>
 <a href="priority/plans">Plans</a> - The point of the whole project — get the plans and build a calorie fountain for yourself.</li>
 </ul>
