Cleaning up an accidental inclusion of dev files.

--- a/cache-dev/pages/home.html
+++ b/cache-dev/pages/home.html
@@ -5,8 +5,9 @@
     <div class="card-body d-flex flex-column align-items-start">
         <h3 class="mb-0">What am I building?</h1>
         <p>I call it a "calorie fountain" — an indoor farming system that can feed a small family and fit within a single room of a suburban home.</p>
-        <p>Slam-dunk success would be a system that can support three adults indefinitely, while being self-sufficient for all its power, light and heating needs. But I'll take anything that doesn't poison the family and set fire to the dog.</p>
-        </p>
+
+        <p>Early systems won't be as efficient, but in the long term, a calorie fountain should be able to supply the full nutritional needs of three adults, all year, and cost less than $200/month to operate.</p>
+
         <p>I also hope to build a community of <i>fountaineers</i> who are intrigued by the idea and want to get involved. If that's you, Step 1 is to engage in the comments.</p>
     </div>
     </div>
@@ -16,18 +17,23 @@
     <div class="card-body d-flex flex-column align-items-start">
         <h3 class="mb-0">Why am I building it?</h1>
         <p> 1/5 of children in Canada go to bed hungry at least once a week because their families can't afford groceries. But current indoor farming ventures seem focused on leafy "supplemental" crops — growing salads for the middle class — because that's where the money is that can provide a return for their investors.</p>
-        <p>But I think we can use that same technology to bring food security to those who don't already have it. Better yet, instead of using it to sell them food, I think we could show them how to build a system for themselves and become nutritionally self-sufficient. Forever. And that seems like a project worth doing.</p>
+
+        <p>I think that same technology could be used to bring food security to those who don't already have it, by showing them how to build a system for themselves that makes them nutritionally self-sufficient. Forever.</p>
     </div>
     </div>
     </div>
 </div>
 </div>
 
-<h1>Organization</h1>
+<h1>Navigation</h1>
 <p>All the work I'm doing to develop the calorie fountain will be posted here. This site will always be up-to-date with the most recent plans and suggestions, and can be downloaded onto a laptop or even a thumb drive and viewed in your browser in any operating system and without having to install any other tools. </p>
 <p>The site is organized into 3 main sections: </p>
 <ul>
 <li><a href="/priority/labnotes">Lab Notes</a> - Think of these as the project water cooler. It's where you'll find ideas, thoughts about the project, links to related materials, and minor status updates about my active investigations.</li>
-<li><a href="/priority/milestones">Milestones</a> - Think of these as "Reports to Management." These are the more official posts I make to document decisions, propose new investigations, and report on their status.</li>
-<li><a href="/priority/plans">Plans</a> - The point of the whole project — get the plans and build a calorie fountain for yourself.</li>
+<li><a href="/priority/targets">Targets</a> - Think of these as "Reports to Management." These are the more official posts I make to declare specific project goals and track progress toward them.</li>
+<li><a href="/priority/results">Results</a> - The point of the whole project — get the plans and build a calorie fountain for yourself.</li>
 </ul>
+<h1>Get Involved</h1>
+<p>I welcome comments that contribute to this dialogue of ideas and enrich the conversation, but try to keep things constructive. This is essentially my lab notebook, so I'll be posting thoughts as they occur to me, regardless of how raw or ill-informed they might be. Don't tell me an idea is dumb — tell me what the challenges are.</p>
+<p>And just to give fair warning: I will be ruthless about editing — or outright removing — anything that I feel pollutes the spirit of collaborative investigation. </p>
+<p><strong>Note:</strong> After a very frustrating experiment with one comment engine, I have temporarily disabled it. A new discussion system will be available soon. Stay tuned.</p>
