Nikola auto commit.
Source commit: b95f4676b318579ef9c7350fb79bb11446c03a4f
Nikola version: 8.2.3

--- a/index.html
+++ b/index.html
@@ -139,9 +139,8 @@
 <a href="/priority/results">Results</a> - The point of the whole project — get the plans and build a calorie fountain for yourself.</li>
 </ul>
 <h2>Get Involved</h2>
-<p>I welcome comments that contribute to this dialogue of ideas and enrich the conversation, but try to keep things constructive. This is essentially my lab notebook, so I'll be posting thoughts as they occur to me, regardless of how raw or ill-informed they might be. Don't tell me an idea is dumb — tell me what the challenges are.</p>
-<p>And just to give fair warning: I will be ruthless about editing — or outright removing — anything that I feel pollutes the spirit of collaborative investigation. </p>
-<p><strong>Note:</strong> After a very frustrating experiment with one comment engine, I have temporarily disabled it. A new discussion system will be available soon. Stay tuned.</p>
+<p>I welcome comments that contribute to this dialogue of ideas, but fair warning: I will be ruthless about editing — or outright removing — anything that I feel pollutes the spirit of collaborative discussion. </p>
+<p><strong>Note:</strong> After an unsatisfying experiment with one engine, I have temporarily disabled comments. A new discussion system will be available soon. Stay tuned.</p>
     </div>
     <!-- from base/templates/story.tmpl regarding comments -->
     
