Nikola auto commit.
Source commit: d8d674462c35f3691f52cefe7c36bf517442bf24
Nikola version: 8.2.3

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 <a href="/priority/results">Results</a> - The point of the whole project — get the plans and build a calorie fountain for yourself.</li>
 </ul>
 <h2>Get Involved</h2>
-<p>I welcome comments that contribute to this dialogue of ideas, but fair warning: I will be ruthless about editing — or outright removing — anything that I feel pollutes the spirit of collaborative discussion. </p>
-<p><strong>Note:</strong> After an unsatisfying experiment with one engine, I have temporarily disabled comments. A new discussion system will be available soon. Stay tuned.</p>
+<p>Think I'm crazy? Me too, but I'd love to hear <em>your</em> reasons, so tell me what I've missed. And then, who knows? May we can resolve those problems without having to throw out the whole thing. </p>
+<p><strong>Note:</strong> After an unsatisfying experiment with one engine, I have temporarily disabled comments while I investigate alternative solutions. But fear not! Comments will be back soon. Stay tuned.</p>
     </div>
     <!-- from base/templates/story.tmpl regarding comments -->
         <section class="comments"><h2>Comments</h2>
